added in missing copyright

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <img src="resources/phone.png" height="75"/>
     <h3>Coming soon for iPhone and Android</h3>
     <a href="">Download Excursion (Coming soon!)</a><br/>
+    <div id="copy">&copy; Excursion</div>
   </body>
 </html>
