--- a/index.html
+++ b/index.html
@@ -3,20 +3,22 @@
     <link rel='stylesheet' href='resources/style.css' type='text/css' />
   </head>
   <body>
-    <h2>Discover hidden places in the world around you</h2>
-    <a href="">Download Excursion (Coming soon!)</a><br/>
-    <video autoplay>
-      <source src="resources/excursion.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
-    <h3>Your personal travel guide</h3>
-    <div id="desc">Excursion remembers places you like, and recommends new points of interest around you.</div>
-    <p/>
-    <img src="resources/camp.jpg" width="500"/>
-    <p/>
-    <img src="resources/phone.png" height="75"/>
-    <h3>Coming soon for iPhone and Android</h3>
-    <a href="">Download Excursion (Coming soon!)</a><br/>
-    <div id="copy">&copy; Excursion</div>
+    <div id="content">
+      <h2>Discover hidden places in the world around you</h2>
+      <a href="">Download Excursion (Coming soon!)</a><br/>
+      <video autoplay>
+        <source src="resources/excursion.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+      <h3>Your personal travel guide</h3>
+      <div id="desc">Excursion remembers places you like, and recommends new points of interest around you.</div>
+      <p/>
+      <img src="resources/camp.jpg" width="500"/>
+      <p/>
+      <img src="resources/phone.png" height="75"/>
+      <h3>Coming soon for iPhone and Android</h3>
+      <a href="">Download Excursion (Coming soon!)</a><br/>
+      <div id="copy">&copy; Excursion</div>
+  </div>
   </body>
 </html>
